fixing conf file

--- a/docker-files/connect-sftp/sftp.conf
+++ b/docker-files/connect-sftp/sftp.conf
@@ -1,9 +1,9 @@
 [sftp-server]
-hostname=127.0.0.1
+hostname=192.168.86.34
 username=orenault
-src_path=/tmp/src-data
-dest_path='/mnt/data'
+src_path=Downloads/sftp
+dest_path=/mnt/data
 
 [ssh-conf]
-ssh_key='/mnt/conf/id_rsa'
-known_hosts_file='/mnt/conf/known_hosts'
+ssh_key=/mnt/conf/id_rsa
+known_hosts_file=/mnt/conf/known_hosts
