--- a/airflow_home/unittests.cfg
+++ b/airflow_home/unittests.cfg
@@ -4,14 +4,17 @@ airflow_home = /home/orenault/Developments/airflow-demo/airflow_home
 dags_folder = /home/orenault/Developments/airflow-demo/airflow_home/dags
 plugins_folder = /home/orenault/Developments/airflow-demo/airflow_home/plugins
 base_log_folder = /home/orenault/Developments/airflow-demo/airflow_home/logs
+logging_level = INFO
 executor = SequentialExecutor
 sql_alchemy_conn = sqlite:////home/orenault/Developments/airflow-demo/airflow_home/unittests.db
 load_examples = True
 donot_pickle = False
 dag_concurrency = 16
 dags_are_paused_at_creation = False
-fernet_key = cryptography_not_found_storing_passwords_in_plain_text
+fernet_key = CS-HrENa9JywBSAEUS4oobCvXTYUQ0ucIFIu7GOjFIA=
 non_pooled_task_slot_count = 128
+enable_xcom_pickling = False
+killed_task_cleanup_time = 5
 
 [cli]
 api_client = airflow.api.client.local_client
@@ -28,8 +31,10 @@ base_url = http://localhost:8080
 web_server_host = 0.0.0.0
 web_server_port = 8080
 dag_orientation = LR
+dag_default_view = tree
 log_fetch_timeout_sec = 5
 hide_paused_dags_by_default = False
+page_size = 100
 
 [email]
 email_backend = airflow.utils.email.send_email_smtp
@@ -39,7 +44,7 @@ smtp_host = localhost
 smtp_user = airflow
 smtp_port = 25
 smtp_password = airflow
-smtp_mail_from = airflow@airflow.com
+smtp_mail_from = airflow@example.com
 
 [celery]
 celery_app_name = airflow.executors.celery_executor
@@ -59,3 +64,7 @@ max_threads = 2
 catchup_by_default = True
 scheduler_zombie_task_threshold = 300
 dag_dir_list_interval = 0
+max_tis_per_query = 0
+
+[admin]
+hide_sensitive_variable_fields = True
