--- a/docker-files/connect-sftp/sftp.conf
+++ b/docker-files/connect-sftp/sftp.conf
@@ -1,12 +1,9 @@
 [sftp-server]
-hostname=52.176.150.149
-username=carlton
-<<<<<<< current
-src_path=olivier/
-=======
-src_path=olivier
->>>>>>> before discard
+hostname=81.110.123.216
+username=orenault
+src_path=Downloads/sftp/
 dest_path=/mnt/data
+port=2222
 
 [ssh-conf]
 ssh_key=/mnt/conf/id_rsa
