--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,23 @@
 adal==0.4.7
-airflow==1.8.0
-alembic==0.9.6
+alembic==0.9.7
+apache-airflow==1.9.0
 asn1crypto==0.24.0
 azure-common==1.1.8
-azure-mgmt-compute==3.0.1
 azure-mgmt-containerinstance==0.2.0
-azure-mgmt-containerregistry==1.0.1
 azure-mgmt-nspkg==2.0.0
 azure-mgmt-resource==1.2.2
 azure-nspkg==2.0.0
-certifi==2017.11.5
-cffi==1.11.2
+bcrypt==3.1.4
+bleach==2.1.2
+certifi==2018.1.18
+cffi==1.11.4
 chardet==3.0.4
 click==6.7
+configparser==3.5.0
 croniter==0.3.20
 cryptography==2.1.4
 dill==0.2.7.1
 docutils==0.14
-enum34==1.1.6
 Flask==0.12.2
 Flask-Admin==1.5.0
 Flask-Cache==0.13.1
@@ -29,8 +29,8 @@ future==0.16.0
 gitdb2==2.0.3
 GitPython==2.1.8
 gunicorn==19.7.1
+html5lib==1.0.1
 idna==2.6
-ipaddress==1.0.19
 isodate==0.6.0
 itsdangerous==0.24
 Jinja2==2.10
@@ -46,10 +46,13 @@ numpy==1.14.0
 oauthlib==2.0.6
 ordereddict==1.1
 pandas==0.22.0
+paramiko==2.4.0
 psutil==5.4.3
+pyasn1==0.4.2
 pycparser==2.18
 Pygments==2.2.0
 PyJWT==1.5.3
+PyNaCl==1.2.1
 python-daemon==2.1.2
 python-dateutil==2.6.1
 python-editor==1.0.3
@@ -63,11 +66,12 @@ SecretStorage==2.3.1
 setproctitle==1.1.10
 six==1.11.0
 smmap2==2.0.3
-SQLAlchemy==1.2.0
+SQLAlchemy==1.2.1
 tabulate==0.8.2
-thrift==0.10.0
+thrift==0.11.0
 Unidecode==1.0.22
 urllib3==1.22
+webencodings==0.5.1
 Werkzeug==0.14.1
 WTForms==2.1
 zope.deprecation==4.3.0
